added lz4 and other stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,11 @@ include(ConfigureCUDA)
 include(ConfigureBoost)
 include(ConfigureAWSSDK)
 #include(ConfigureFlatBuffers)
-#include(ConfigureLz4)
-#include(ConfigureZSTD)
-#include(ConfigureBrotli)
-#include(ConfigureSnappy)
-#include(ConfigureThrift)
+include(ConfigureLz4)
+include(ConfigureZSTD)
+include(ConfigureBrotli)
+include(ConfigureSnappy)
+include(ConfigureThrift)
 include(ConfigureArrow)
 #include(ConfigureParquet)
 #include(ConfigureRMM)
